# backend-dev-notes-Rust

CORS/: Cargo.toml  README.md
CORS/src/: main.rs
Distributed-rate-limiting/: Cargo.toml  README.md
Distributed-rate-limiting/src/: main.rs  rate_limiter.rs
File-Upload/: Cargo.toml  README.md  demo.txt
File-Upload/src/: main.rs
Global-fallback/: Cargo.toml  README.md
Global-fallback/src/: main.rs
Graphql_/: Cargo.toml  README.md
Graphql_/src/: db.rs  main.rs  query_engine.rs  user_service.rs
JSON-RPCs/: Cargo.toml  README.md
JSON-RPCs/src/: main.rs
Logger/: Cargo.toml
Logger/src/: main.rs
Nginix/: Cargo.toml  README.md
Nginix/deployment/: docker-compose.yml  nginx.conf
Nginix/src/: main.rs
OTP/: Cargo.toml  README.md  docker-compose.yml
OTP/migrations/: 01_create_users.sql
OTP/src/: main.rs  model.rs  twilio_service.rs
Pingora/: Cargo.toml
Request-Validation-Extractor/: Cargo.toml  README.md
Request-Validation-Extractor/src/: main.rs  model.rs  validator.rs
Server-side-Events/: Cargo.toml  README.md
Server-side-Events/src/: client.rs  server.rs
Smtp_protocol/: Cargo.toml  README.md
Smtp_protocol/src/: main.rs
Websockets/: Cargo.toml  README.md
Websockets/src/: main.rs
gRPC/: .gitignore  Cargo.toml  README.md  build.rs
gRPC/gRPC-auth/: README.md
gRPC/gRPC-auth/src/: client.rs  server.rs
gRPC/gRPC-setup/: README.md  build.rs
gRPC/gRPC-setup/proto/: helloworld.proto
gRPC/gRPC-setup/src/: client.rs
gRPC/gRPC-stream/: Cargo.toml  README.md  build.rs
gRPC/gRPC-stream/proto/: stream.proto
gRPC/gRPC-stream/src/: server.rs
gRPC/proto/: helloworld.proto
gRPC/src/: server.rs
