[package]
name = "JSON-RPCs"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"
serde_json = "1.0.117"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
