[package]
name = "OTP"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
