[package]
name = "gRPC"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.12.0"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"
