[package]
name = "gRPC-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
h2 = "0.4.15"
prost = "0.14.4"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.6"
tonic-prost = "0.14.6"

[build-dependencies]
tonic-prost-build = "0.14.6"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"
